Bug refixed 3306729: the first header should have border-left when the first column is covered with other header

--- a/zul/src/archive/web/js/zul/grid/less/grid.less
+++ b/zul/src/archive/web/js/zul/grid/less/grid.less
@@ -66,6 +66,11 @@
 .z-columns {
 	th:first-child {
 		border-left: none;
+
+		// B50-3306729: the first header should have border-left when the first column is covered with other header
+		&.z-columns-border {
+			border-left: 1px solid @tableTitleBorderColor;
+		}
 	}
 	&-bar {
 		border-left: 1px solid @tableTitleBorderColor;
