--- a/zul/src/archive/web/js/zul/mesh/less/auxhead.less
+++ b/zul/src/archive/web/js/zul/mesh/less/auxhead.less
@@ -3,6 +3,11 @@
 .z-auxhead {
 	th:first-child {
 		border-left: none;
+
+		// B50-3306729: the first header should have border-left when the first column is covered with other header
+		&.z-auxhead-border {
+			border-left: 1px solid @tableTitleBorderColor;
+		}
 	}
 
 	&-bar {
