--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -62,6 +62,11 @@
 .z-listhead {
 	th:first-child {
 		border-left: none;
+
+		// B50-3306729: the first header should have border-left when the first column is covered with other header
+		&.z-listhead-border {
+			border-left: 1px solid @tableTitleBorderColor;
+		}
 	}
 	&-bar {
 		border-left: 1px solid @tableTitleBorderColor;
